--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bulma": "^0.7.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-loader-spinner": "^3.1.5",
     "react-router-dom": "^5.1.2"
   }
 }
