--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "serve": "webpack-dev-server —-mode-development",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "webpack-dev-server --mode=development",
+    "deploy": "npm run build && gh-pages -d dist",
     "build": "webpack -p"
   },
   "author": "",
